vendor/fixed-macro/tests/compile-fail/invalid-type-05.stderr
error: invalid fixed type: invalid number of fractional bits
 --> $DIR/invalid-type-05.rs:2:32
  |
2 |     fixed_macro::fixed!(-1.23: I16Fab);
  |                                ^^^^^^
